unpackaged/main/default/objects/zkfedex__QueuedShipment__c/zkfedex__QueuedShipment__c.object-meta.xml
<CustomObject>
    <label>FedEx Queued Shipment</label>
    <nameField>
        <displayFormat>Queued-Shipment-{00000000}</displayFormat>
        <label>Queued Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Queued Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>