unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__Account__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FedEx Queued Shipments</relationshipLabel>
    <relationshipName>FedEx_Queued_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>