unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__BulkShipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BulkShipment__c</fullName>
    <label>Bulk Shipment</label>
    <referenceTo>zkfedex__BulkShipment__c</referenceTo>
    <relationshipLabel>FedEx Queued Shipments</relationshipLabel>
    <relationshipName>FedEx_Queued_Shipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>