unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__Contact__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FedEx Queued Shipments</relationshipLabel>
    <relationshipName>FedEx_Queued_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>