unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__CustomAddressSource__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CustomAddressSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Address Source</label>
    <referenceTo>zkfedex__CustomAddressSource__c</referenceTo>
    <relationshipLabel>FedEx Queued Shipments</relationshipLabel>
    <relationshipName>FedEx_Queued_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>