unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__DeliveryInstructions__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DeliveryInstructions__c</fullName>
    <label>Delivery Instructions</label>
    <type>TextArea</type>
</CustomField>