unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__DropoffType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DropoffType__c</fullName>
    <label>Dropoff Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Service Center</fullName>
            </value>
            <value>
                <fullName>Drop Box</fullName>
            </value>
            <value>
                <fullName>Regular Pickup</fullName>
            </value>
            <value>
                <fullName>Request Courier</fullName>
            </value>
            <value>
                <fullName>Station</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>