unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__DutiesPaymentType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DutiesPaymentType__c</fullName>
    <label>Duties/Taxes/Fees Payment Type</label>
    <length>12</length>
    <type>Text</type>
</CustomField>