unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__DutiesPayorAccount__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DutiesPayorAccount__c</fullName>
    <label>Duties/Taxes/Fees Payor Account</label>
    <length>12</length>
    <type>Text</type>
</CustomField>