unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EmailMessage__c</fullName>
    <label>Email Message</label>
    <type>TextArea</type>
</CustomField>