unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__EmailRecipient1__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EmailRecipient1__c</fullName>
    <label>Email Recipient 1</label>
    <type>Email</type>
</CustomField>