unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__EmailRecipient2__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EmailRecipient2__c</fullName>
    <label>Email Recipient 2</label>
    <type>Email</type>
</CustomField>