unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__EmailRecipient3__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EmailRecipient3__c</fullName>
    <label>Email Recipient 3</label>
    <type>Email</type>
</CustomField>