unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__EntryNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EntryNumber__c</fullName>
    <label>Entry Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>