unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__LabelImageType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__LabelImageType__c</fullName>
    <label>Label Image Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>PNG</fullName>
            </value>
            <value>
                <fullName>Thermal 4x6 - Eltron</fullName>
            </value>
            <value>
                <fullName>Thermal 4x6 - Zebra</fullName>
            </value>
            <value>
                <fullName>Thermal 4x6.75 - Eltron</fullName>
            </value>
            <value>
                <fullName>Thermal 4x6.75 - Zebra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>