unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__Lead__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>FedEx Queued Shipments</relationshipLabel>
    <relationshipName>FedEx_Queued_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>