unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>FedEx Queued Shipments</relationshipLabel>
    <relationshipName>FedEx_Queued_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>