unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sender</fullName>
            </value>
            <value>
                <fullName>Recipient</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>