unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__PayorAccount__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PayorAccount__c</fullName>
    <label>Payor Account</label>
    <length>12</length>
    <type>Text</type>
</CustomField>