unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__PayorAccountCountry__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PayorAccountCountry__c</fullName>
    <label>Payor Account Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>