unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__PickupTime__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PickupTime__c</fullName>
    <label>Pickup Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>