unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__RecipientCountry__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientCountry__c</fullName>
    <label>Recipient Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>