unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__RecipientEmail__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientEmail__c</fullName>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>