unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__RecipientPhone__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientPhone__c</fullName>
    <label>Recipient Phone</label>
    <length>35</length>
    <type>Text</type>
</CustomField>