unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__RecipientPostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientPostalCode__c</fullName>
    <label>Recipient Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>