unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__RecipientStreet__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientStreet__c</fullName>
    <label>Recipient Street</label>
    <type>TextArea</type>
</CustomField>