unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__ReferenceDepartmentNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReferenceDepartmentNumber__c</fullName>
    <label>Reference - Department Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>