unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__ReferencePoNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReferencePoNumber__c</fullName>
    <label>Reference - P.O. Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>