unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__ReferenceYourReference__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReferenceYourReference__c</fullName>
    <label>Reference - Your Reference</label>
    <length>35</length>
    <type>Text</type>
</CustomField>