unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__SenderCity__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderCity__c</fullName>
    <label>Sender City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>