unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__SenderCompany__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderCompany__c</fullName>
    <label>Sender Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>