unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__SenderCountry__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderCountry__c</fullName>
    <label>Sender Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>