unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__SenderEmail__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderEmail__c</fullName>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>