unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__SenderIsResidential__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderIsResidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sender Address is Residential</label>
    <type>Checkbox</type>
</CustomField>