unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__SenderName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderName__c</fullName>
    <label>Sender Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>