unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__SenderPostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderPostalCode__c</fullName>
    <label>Sender Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>