unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__SenderState__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderState__c</fullName>
    <label>Sender State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>