unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__ServiceType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ServiceType__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic: FedEx First Overnight</fullName>
            </value>
            <value>
                <fullName>Domestic: FedEx Priority Overnight</fullName>
            </value>
            <value>
                <fullName>Domestic: FedEx Standard Overnight</fullName>
            </value>
            <value>
                <fullName>Domestic: FedEx 2Day</fullName>
            </value>
            <value>
                <fullName>Domestic: FedEx 2Day A.M.</fullName>
            </value>
            <value>
                <fullName>Domestic: FedEx Express Saver</fullName>
            </value>
            <value>
                <fullName>Domestic: FedEx Ground</fullName>
            </value>
            <value>
                <fullName>Domestic: FedEx Home Delivery</fullName>
            </value>
            <value>
                <fullName>Domestic: FedEx SmartPost</fullName>
            </value>
            <value>
                <fullName>International: FedEx Europe First</fullName>
            </value>
            <value>
                <fullName>International: FedEx International Economy</fullName>
            </value>
            <value>
                <fullName>International: FedEx International Economy Freight</fullName>
            </value>
            <value>
                <fullName>International: FedEx International First</fullName>
            </value>
            <value>
                <fullName>International: FedEx International Priority</fullName>
            </value>
            <value>
                <fullName>International: FedEx International Priority Freight</fullName>
            </value>
            <value>
                <fullName>International: FedEx International Ground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>