unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__ShipmentTypeExt__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ShipmentTypeExt__c</fullName>
    <label>Shipment Type Ext</label>
    <length>100</length>
    <type>Text</type>
</CustomField>