unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__SmartPostAncillaryEndorsement__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SmartPostAncillaryEndorsement__c</fullName>
    <label>SmartPost Ancillary Endorsement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address Correction</fullName>
            </value>
            <value>
                <fullName>Carrier Leave If No Response</fullName>
            </value>
            <value>
                <fullName>Change Service</fullName>
            </value>
            <value>
                <fullName>Forwarding Service</fullName>
            </value>
            <value>
                <fullName>Return Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>