unpackaged/main/default/objects/zkfedex__QueuedShipment__c/fields/zkfedex__WeightDimensionUnits__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__WeightDimensionUnits__c</fullName>
    <label>Weight/Dimension Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LB / IN</fullName>
            </value>
            <value>
                <fullName>KG / CM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>